--- a/app/src/main/res/layout/picker_color_item.xml
+++ b/app/src/main/res/layout/picker_color_item.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.DialogVM" />
+            type="com.ezralee.bdotodo.viewmodel.main.DialogVM" />
     </data>
 <RelativeLayout
     android:layout_width="wrap_content"
