--- a/app/src/main/res/layout/activity_set_history.xml
+++ b/app/src/main/res/layout/activity_set_history.xml
@@ -9,7 +9,7 @@
             type="com.ezralee.bdotodo.data.model.HistoryData" />
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.HistoryVM" />
+            type="com.ezralee.bdotodo.viewmodel.history.SetHistoryActivityVM" />
     </data>
 
 <RelativeLayout
@@ -89,7 +89,7 @@
                 android:textCursorDrawable="@color/colorPrimaryVariant"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@{historyItem.title}"/>
+                android:text="@={historyItem.title}"/>
 
         </LinearLayout>
 
@@ -114,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:fontFamily="@font/nexonlv1_bold"
-                android:text="@{historyItem.date}"
+                android:text="@={historyItem.date}"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:layout_gravity="center"/>
@@ -127,7 +127,7 @@
                 android:layout_weight="1"
                 android:text="오늘"
                 android:textSize="16sp"
-                android:onClick="@{()->viewModel.setToday()}"/>
+                android:onClick="@={()->viewModel.setToday()}"/>
 
         </LinearLayout>
 
@@ -148,7 +148,7 @@
                 android:entries="@array/category_entry"
                 android:textAlignment="center"
                 android:layout_gravity="center"
-                android:onItemSelected=""/>
+                android:onItemSelected="@={()->viewModel.onLanguageSpinnerItemSelected()}"/>
 
         <View
             android:layout_width="match_parent"
@@ -221,16 +221,17 @@
             android:id="@+id/history_memo_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minLines="10"
+            android:minLines="6"
             android:scrollbars="vertical"
             android:overScrollMode="ifContentScrolls"
             android:layout_marginHorizontal="4dp"
+            android:layout_marginBottom="16dp"
             android:background="@null"
             android:hint="히스토리 메모"
             android:textColor="@color/colorOnSecondary"
             android:textColorHint="@color/colorOnSecondary"
             android:textCursorDrawable="@color/colorPrimaryVariant"
-            android:text="@{historyItem.memo}"/>
+            android:text="@={historyItem.memo}"/>
 
 
         <LinearLayout
@@ -238,8 +239,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginHorizontal="60dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/history_done"
@@ -247,7 +247,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="완료"
-                android:onClick="@{()->viewModel.done()}"/>
+                android:onClick="@{()->viewModel.done(historyItem)}"/>
 
             <View
                 android:layout_width="0dp"
