--- a/app/src/main/res/layout/add_todo_recycler_item.xml
+++ b/app/src/main/res/layout/add_todo_recycler_item.xml
@@ -8,7 +8,7 @@
 
     <variable
         name="viewModel"
-        type="com.ezralee.bdotodo.viewmodel.DailyVM" />
+        type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
 </data>
 
 <RelativeLayout
