--- a/app/src/main/res/layout/daily_recycler_item.xml
+++ b/app/src/main/res/layout/daily_recycler_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 <data>
     <variable
         name="accureItem"
@@ -9,12 +9,13 @@
         type="com.ezralee.bdotodo.data.model.GoalItem" />
     <variable
         name="viewModel"
-        type="com.ezralee.bdotodo.viewmodel.DailyVM" />
+        type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
 </data>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    android:onLongClick="@{()->viewModel.additionalWork()}">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/daily_recycler_item_civ"
