--- a/app/src/main/res/layout/fragment_daliy.xml
+++ b/app/src/main/res/layout/fragment_daliy.xml
@@ -8,7 +8,7 @@
             type="com.ezralee.bdotodo.data.model.TaskAccureData" />
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.DailyVM" />
+            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/daily_recycler_item"
-                android:onItemSelected="@{()->viewModel.showDetailTodo()}"
+                android:onItemSelected="@{()->viewModel.complete()}"
                 android:adapter="@{viewModel.adapter}"/>
 
             <RelativeLayout
