--- a/app/src/main/res/layout/fragment_set_goal_1.xml
+++ b/app/src/main/res/layout/fragment_set_goal_1.xml
@@ -1,176 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <variable
-            name="goalItem"
-            type="com.ezralee.bdotodo.data.model.GoalItem" />
+            name="goalData"
+            type="com.ezralee.bdotodo.data.model.GoalData" />
+
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.GoalVM" />
+            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalFragment1VM" />
     </data>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:id="@+id/set_goal1_root">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/set_goal1_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:layout_marginTop="24dp">
+        android:background="@null">
 
         <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_history_title"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="24dp"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <LinearLayout
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_history_title"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/history_title_edit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="4dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:gravity="center_horizontal"
+                    android:hint="목표 입력"
+                    android:maxLines="1"
+                    android:text="@={goalData.goal}"
+                    android:textColor="@color/colorOnSecondary"
+                    android:textColorHint="@color/colorOnSecondary"
+                    android:textCursorDrawable="@color/colorPrimaryVariant" />
+
+                <ImageView
+                    android:id="@+id/goal_color_picker"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="right"
+                    android:layout_marginHorizontal="8dp"
+                    android:onClick="@={()->viewModel.colorPick()}"
+                    android:src="@drawable/ic_baseline_circle_24" />
+
+            </LinearLayout>
+
+
+            <View
+                android:layout_width="250dp"
+                android:layout_height="2dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
+                android:background="@color/colorPrimaryVariant" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="8dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/goal_start_date"
+                        style="@style/history_dialog_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nexonlv1_bold"
+                        android:onClick="@={()->viewModel.datePick()}"
+                        android:text="@={viewModel.today}"
+                        android:textSize="20sp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/colorPrimaryVariant" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="12dp"
+                    android:src="@drawable/ic_baseline_arrow_forward_24" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/goal_end_date"
+                        style="@style/history_dialog_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nexonlv1_bold"
+                        android:text="@={viewModel.today}"
+                        android:textSize="20sp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/colorPrimaryVariant" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_history_title"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginVertical="16dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/history_category"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/bs_search_shape"
+                    android:backgroundTint="@color/colorOnSecondary"
+                    android:entries="@array/category_entry"
+                    android:onItemSelected="@={()->viewModel.setCategory()}"
+                    android:spinnerMode="dialog"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
+                android:background="@color/colorPrimaryVariant" />
 
             <EditText
-                android:id="@+id/history_title_edit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/history_memo_edit"
+                android:layout_width="match_parent"
+                android:layout_height="330dp"
                 android:layout_marginHorizontal="4dp"
-                android:layout_weight="1"
                 android:background="@null"
-                android:gravity="center_horizontal"
-                android:hint="목표 입력"
-                android:maxLines="1"
-                android:text="@{goalItem.goalData.goal}"
+                android:hint="히스토리 제목 입력"
+                android:minLines="10"
+                android:overScrollMode="ifContentScrolls"
+                android:scrollbars="vertical"
+                android:text="@={goalData.memo}"
                 android:textColor="@color/colorOnSecondary"
                 android:textColorHint="@color/colorOnSecondary"
                 android:textCursorDrawable="@color/colorPrimaryVariant" />
 
-            <ImageView
-                android:id="@+id/goal_color_picker"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="right"
-                android:layout_marginHorizontal="8dp"
-                android:src="@drawable/ic_baseline_circle_24"
-                android:onClick="@{()->viewModel.colorPick()}"/>
-
         </LinearLayout>
-
-
-        <View
-            android:layout_width="250dp"
-            android:layout_height="2dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="12dp"
-            android:background="@color/colorPrimaryVariant" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginVertical="8dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/goal_start_date"
-                    style="@style/history_dialog_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/nexonlv1_bold"
-                    android:text="@{viewModel.today}"
-                    android:textSize="20sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="8dp"
-
-                    android:background="@color/colorPrimaryVariant" />
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_baseline_arrow_forward_24"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginHorizontal="12dp"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/goal_end_date"
-                    style="@style/history_dialog_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/nexonlv1_bold"
-                    android:text="@{viewModel.today}"
-                    android:textSize="20sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@color/colorPrimaryVariant" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_history_title"
-            android:layout_marginHorizontal="4dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginVertical="16dp">
-
-            <Spinner
-                android:id="@+id/history_category"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:background="@drawable/bs_search_shape"
-                android:backgroundTint="@color/colorOnSecondary"
-                android:spinnerMode="dialog"
-                android:entries="@array/category_entry"
-                android:textAlignment="center"
-                android:onItemSelected="@{()->viewModel.setCategory()}"/>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="12dp"
-            android:background="@color/colorPrimaryVariant" />
-
-        <EditText
-            android:id="@+id/history_memo_edit"
-            android:layout_width="match_parent"
-            android:layout_height="330dp"
-            android:layout_marginHorizontal="4dp"
-            android:background="@null"
-            android:hint="히스토리 제목 입력"
-            android:minLines="10"
-            android:overScrollMode="ifContentScrolls"
-            android:scrollbars="vertical"
-            android:text="@{goalItem.goalData.memo}"
-            android:textColor="@color/colorOnSecondary"
-            android:textColorHint="@color/colorOnSecondary"
-            android:textCursorDrawable="@color/colorPrimaryVariant" />
-
-    </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
 </layout>
