--- a/app/src/main/res/layout/goal_preset_recycler_item.xml
+++ b/app/src/main/res/layout/goal_preset_recycler_item.xml
@@ -7,15 +7,16 @@
                     type="com.ezralee.bdotodo.data.model.GoalPreset" />
                 <variable
                     name="viewModel"
-                    type="com.ezralee.bdotodo.viewmodel.GoalVM" />
+                    type="com.ezralee.bdotodo.viewmodel.goal.GoalPresetActivityVM" />
         </data>
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp">
+    android:padding="12dp"
+    android:onClick="@{(presetGoal)->viewModel.getPresetData(presetGoal)}">
 
         <TextView
-            android:id="@+id/goal_name"
+            android:id="@+id/preset_goal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{presetItem.goalPreset}"
