--- a/app/src/main/res/layout/picker_number.xml
+++ b/app/src/main/res/layout/picker_number.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.DialogVM" />
+            type="com.ezralee.bdotodo.viewmodel.main.DialogVM" />
     </data>
 
 <LinearLayout
