--- a/app/src/main/res/layout/set_goal2_recycler_item.xml
+++ b/app/src/main/res/layout/set_goal2_recycler_item.xml
@@ -1,102 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <variable
             name="taskData"
             type="com.ezralee.bdotodo.data.model.TaskData" />
+
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.GoalVM" />
+            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalFragment2VM" />
     </data>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/and_or"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        style="@style/normaltextStyle"
-        android:textColor="@color/colorPrimaryVariant"
-        android:layout_gravity="center"/>
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginVertical="12dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/task"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
-            android:background="@drawable/bs_search_shape"
-            android:backgroundTint="@color/colorOnSecondary"
-            android:gravity="center_horizontal"
-            android:hint="재료명"
-            android:maxLines="1"
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:textCursorDrawable="@color/colorPrimaryVariant"
-            android:text="@{taskData.task}"/>
+        android:orientation="vertical">
 
         <TextView
-            style="@style/history_dialog_text"
+            android:id="@+id/and_or"
+            style="@style/normaltextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="12dp"
-            android:text="이"
-            android:textSize="24sp" />
+            android:text=""
+            android:textColor="@color/colorPrimaryVariant" />
 
-        <EditText
-            android:id="@+id/total"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
-            android:background="@drawable/bs_search_shape"
-            android:backgroundTint="@color/colorOnSecondary"
-            android:gravity="center_horizontal"
-            android:hint="필요개수"
-            android:inputType="number"
-            android:maxLines="1"
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:textCursorDrawable="@color/colorPrimaryVariant"
-            android:text="@{taskData.total}"/>
-
-        <TextView
-            style="@style/history_dialog_text"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="개"
-            android:textSize="24sp" />
+            android:layout_marginVertical="12dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/add_task"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_baseline_add_circle_outline_24"
-            android:onClick="@{()->viewModel.addTask()}"/>
+            <EditText
+                android:id="@+id/task"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="4dp"
+                android:background="@drawable/bs_search_shape"
+                android:backgroundTint="@color/colorOnSecondary"
+                android:gravity="center_horizontal"
+                android:hint="재료명"
+                android:maxLines="1"
+                android:text="@={taskData.task}"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@color/colorPrimary"
+                android:textCursorDrawable="@color/colorPrimaryVariant" />
 
-        <ImageView
-            android:id="@+id/delete_task"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_baseline_delete_outline_24"
-            android:onClick="@{()->viewModel.deleteTask()}"/>
+            <TextView
+                style="@style/history_dialog_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="12dp"
+                android:text="이"
+                android:textSize="24sp" />
 
+            <EditText
+                android:id="@+id/total"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="4dp"
+                android:background="@drawable/bs_search_shape"
+                android:backgroundTint="@color/colorOnSecondary"
+                android:gravity="center_horizontal"
+                android:hint="필요개수"
+                android:inputType="number"
+                android:maxLines="1"
+                android:text="@={taskData.total}"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@color/colorPrimary"
+                android:textCursorDrawable="@color/colorPrimaryVariant" />
+
+            <TextView
+                style="@style/history_dialog_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="개"
+                android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/add_task"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:onClick="@{()->viewModel.addTask()}"
+                android:src="@drawable/ic_baseline_add_circle_outline_24" />
+
+            <ImageView
+                android:id="@+id/delete_task"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:onClick="@{()->viewModel.deleteTask()}"
+                android:src="@drawable/ic_baseline_delete_outline_24" />
+        </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
 </layout>
